--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="/lib_p5/p5.min.js"></script>
-		<script type="text/javascript" src="/lib_p5/p5.dom.js"></script>
-		<script type="text/javascript" src="/lib_p5/p5.dom.min.js"></script>
+		<script type="text/javascript" src="./lib_p5/p5.min.js"></script>
+		<script type="text/javascript" src="./lib_p5/p5.dom.js"></script>
+		<script type="text/javascript" src="./lib_p5/p5.dom.min.js"></script>
 		<script type="text/javascript" src="Pong.js"></script>
 	</head>
 </html>
